web/styles/style.css
/* ... */
div.news-icon {
    float: right;
    line-height: 2rem;
    font-size: 1.25rem;
    margin-top: 0.125rem;
}

div.news-title {
    margin-top: -0.375rem;
    font-size: 1.25rem;
    line-height: 2rem;
    font-weight: bold;
    padding-bottom: 0.0625rem;
    margin-bottom: 0.25rem;
    border-bottom: 0.0625rem dotted #999999;
}

div.news-date {
    text-align: right;
    font-size: 0.75rem;
    font-style: italic;
    color: #333333;
    margin-bottom: -0.625rem;
}

div.game-info {
    display: inline-block;
    vertical-align: top;
    width: 30rem;
    padding: 1rem 1rem 1rem 0;
}

div.game-image {
    display: inline-block;
    text-align: right;
    padding: 0;
    width: 12rem;
    height: 12rem;
    vertical-align: middle;
    overflow: hidden;
    border-radius: 0.125rem;
}

div.game-name {
    font-size: 2rem;
    line-height: 2rem;
    font-weight: bold;
}

div.game-stats {
    margin-top: 0.125rem;
    margin-bottom: 1rem;
}

div.problem-status {
    display: inline-block;
    line-height: 3rem;
    font-size: 1.25rem;
    text-align: center;
}

div.problem-name {
    display: inline-block;
    margin-left: 0.5rem;
    line-height: 3rem;
    font-size: 1.25rem;
    font-weight: bold;
}

div.problem-stats {
    display: block;
    float: right;
    line-height: 3rem;
    font-size: 1.25rem;
}

div.problem-visibility {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 0.125rem;
    text-align: center;
}

div.problem-title {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 0.125rem;
}

div.problem-origin {
    line-height: 0.75rem;
    font-size: 0.875rem;
}

div.problem-resources {
    line-height: 0.875rem;
    font-size: 0.875rem;
    text-align: left;
    text-align: right;
}

div.problem-statement {
    margin-top: 0.25rem;
    line-height: 1.125rem;
}

div.problem-io {
    font-size: 0.9375rem;
    margin-top: 1rem;
    font-weight: bold;
}

div.problem-explanation {
    font-size: 0.75rem;
    text-align: center;
    font-style: italic;
}

div.problem-stats-link {
    font-size: smaller;
    margin-top: -1.5rem;
    margin-right: 0.25rem;
    text-align: right;
}

div.problem-stats-field {
    display: inline-block;
    text-align: center;
    margin: 1rem;
}

div.problem-stats-field-circle {
    width: 5rem;
    height: 5rem;
    font-weight: bold;
    line-height: 5rem;
    border-radius: 2.5rem;
    text-align: center;
    color: #FFFFFF;
    background-color: #0099FF;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
 }

div.problem-stats-field-label {
    font-size: smaller;
}

table.problem-sample {
    width: 100%;
    border-spacing: 0;
    border-collapse: collapse;
    white-space: pre-wrap;
    margin-top: 1rem;
    margin-bottom: 0.0625rem;
}

table.problem-sample tr th {
    font-weight: bold;
    width: 50%;
    max-width: 50%;
}

table.problem-sample tr td {
    font-family: "Consolas", "Ubuntu Mono", "Courier New", monospace;
    vertical-align: top;
    font-size: 0.8125rem;
    width: 50%;
    max-width: 50%;
}

table.problem-sample tr td, table.problem-sample tr th {
    padding: 0.25rem 0.5rem;
    page-break-inside: avoid;
    border: 0.0625rem solid #666666;
}

table.register {
    width: 100%;
    font-size: 1rem;
    border-spacing: 0;
    border-collapse: collapse;
}

table.register tr td.left {
    width: 50%;
    text-align: right;
    padding-right: 0.125rem;
}

table.register tr td.right {
    width: 50%;
    text-align: left;
    padding-left: 0.125rem;
}

input.text {
    height: 1.6rem;
    padding: 0.125rem 0.3125rem;
    margin: 0.0625rem 0;
    border: 0.0625rem solid #888888;
    border-radius: 0.1875rem;
}

input.text:focus {
    box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.24);
}

form.login {
    margin-top: 1rem;
}

form.register {
    margin-top: 1rem;
}

div.input-wrapper {
    text-align: center;
}

button.button {
    padding: 0 0.75rem;
    width: 8rem;
    min-width: 8rem;
    left: 50%;
    margin-top: 0.5rem;
    margin-left: auto;
    line-height: 2rem;
    text-align: center;
    color: #ECECEC;
    border: 0.0625rem solid #FFFFFF;
    border-radius: 0.25rem;
    font-weight: bold;
    -webkit-appearance: none;
}

button.button-large {
    width: 14rem;
    min-width: 14rem;
    line-height: 2.5rem;
}

button.button-color-blue {
    background-color: #0099FF;
}

button.button-color-red {
    background-color: #D84A38;
}

button.button-color-gray {
    color: #FFFFFF;
}

input.button {
    padding: 0 0.75rem;
    width: 8rem;
    min-width: 8rem;
    left: 50%;
    margin-top: 0.5rem;
    margin-left: auto;
    line-height: 2rem;
    text-align: center;
    color: #ECECEC;
    border: 0.0625rem solid #FFFFFF;
    border-radius: 0.25rem;
    font-weight: bold;
    -webkit-appearance: none;
}

input.button-large {
    width: 14rem;
    min-width: 14rem;
    line-height: 2.5rem;
}

input.button-color-blue {
    background-color: #0099FF;
}

input.button-color-red {
    background-color: #D84A38;
}

input.button-color-gray {
    color: #FFFFFF;
}

input.radio {
    margin-left: 0.5rem;
}

div.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #FFFFFF;
    opacity: 0.8;
    z-index: 50;
}

::-webkit-scrollbar {
    display: none;
}

div.action-form {
    overflow-y: auto;
    overflow-x: hidden;
    -ms-overflow-style: none;
    max-height: 40rem;
    width: 43rem;
    top: 50%;
    left: 50%;
    margin: 1.25rem auto 1.25rem -24rem;
    padding: 1.25rem 2.5rem 1rem 2.5rem;
    background: #FFFFFF;
    border: 0.0625rem solid #ccc;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
    border-radius: 0.25rem;
    position: fixed;
    z-index: 89;
}

div.larger-box {
    max-height: 48rem;
}

div.action-form-close {
    display: inline-block;
    position: absolute;
    margin-left: 43.75rem;
    margin-top: -0.75rem;
    color: #555555;
}

div.action-form-close:hover {
    cursor: pointer;
    color: #000000;
}
/* ... */

